--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -20,7 +20,13 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+	/* Paths */
+	"baseUrl": "src",
+    "paths": {
+      "*": ["node_modules/*", "src/*"] 
+	}
   },
   "include": ["src"]
 }
